tests/ui/pattern/deref-patterns/ice-adjust-mode-unimplemented-for-constblock.stderr
error[E0532]: expected a pattern, found a function call
  --> $DIR/ice-adjust-mode-unimplemented-for-constblock.rs:14:9
   |
LL |     let vec![const { vec![] }]: Vec<usize> = vec![];
   |         ^^^^^^^^^^^^^^^^^^^^^^ not a tuple struct or tuple variant
   |
   = note: function calls are not allowed in patterns: <https://doc.rust-lang.org/book/ch19-00-patterns.html>
   = note: this error originates in the macro `vec` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0658]: usage of qualified paths in this context is experimental
  --> $DIR/ice-adjust-mode-unimplemented-for-constblock.rs:14:9
   |
LL |     let vec![const { vec![] }]: Vec<usize> = vec![];
   |         ^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: see issue #86935 <https://github.com/rust-lang/rust/issues/86935> for more information
   = help: add `#![feature(more_qualified_paths)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date
   = note: this error originates in the macro `vec` (in Nightly builds, run with -Z macro-backtrace for more info)

warning: the feature `deref_patterns` is incomplete and may not be safe to use and/or cause compiler crashes
  --> $DIR/ice-adjust-mode-unimplemented-for-constblock.rs:11:12
   |
LL | #![feature(deref_patterns)]
   |            ^^^^^^^^^^^^^^
   |
   = note: see issue #87121 <https://github.com/rust-lang/rust/issues/87121> for more information
   = note: `#[warn(incomplete_features)]` on by default

error[E0164]: expected tuple struct or tuple variant, found associated function `<[_]>::into_vec`
  --> $DIR/ice-adjust-mode-unimplemented-for-constblock.rs:14:9
   |
LL |     let vec![const { vec![] }]: Vec<usize> = vec![];
   |         ^^^^^^^^^^^^^^^^^^^^^^ `fn` calls are not allowed in patterns
   |
   = help: for more information, visit https://doc.rust-lang.org/book/ch19-00-patterns.html
   = note: this error originates in the macro `vec` (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to 3 previous errors; 1 warning emitted

Some errors have detailed explanations: E0164, E0532, E0658.
For more information about an error, try `rustc --explain E0164`.
